<?xml version="1.0"?>
<package format="2">
  <name>lightweight_filtering</name>
  <description>Lightweight filtering library</description>
  <url>https://bitbucket.org/ethz-asl-lr/lightweight_filtering</url>
  <author>Michael Bloesch</author>
  <maintainer email="bloeschm@ethz.ch">Michael Bloesch</maintainer>
  <license>BSD</license>
  <version>0.0.9</version>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>kindr</depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
