<?xml version="1.0"?>
<?xml-model
  href="http://download.ros.org/schema/package_format3.xsd"
  schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rovio</name>
  <version>0.0.0</version>
  <description>

	rovio

  </description>
  <url/>
  <author>bloeschm</author>
  <maintainer email="bloeschm@ethz.ch">bloeschm</maintainer>
  <license>BSD License</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <depend>cmake_modules</depend>
  <depend>lightweight_filtering</depend>
  <depend>kindr</depend>
  <depend>roslib</depend>
  <depend>cv_bridge</depend>
  <depend>message_generation</depend>
  <depend>message_runtime</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>rosbag</depend>
  <depend>yaml_cpp_catkin</depend>
  <depend>tf2_ros</depend>
  <depend>rclcpp</depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
  <member_of_group>rosidl_interface_packages</member_of_group>
</package>
